fix: use Java 8 compatible URLEncoder.encode(String,"UTF-8") for Jabel target